--- a/Playground_GNN.ipynb
+++ b/Playground_GNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "21473544",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
+   "id": "abe11b67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total graphs loaded: 4165\n",
+      "❌ Graf 600 target fora de rang: y=-1, num_nodes=9\n",
+      "❌ Graf 1107 target fora de rang: y=-1, num_nodes=24\n",
+      "❌ Graf 1450 target fora de rang: y=-1, num_nodes=21\n",
+      "❌ Graf 1512 target fora de rang: y=-1, num_nodes=5\n",
+      "✔️ Tots els grafs tenen y dins [0, num_nodes)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "import torch\n",
+    "\n",
+    "def load_raw_graphs(root: Path, limit=None):\n",
+    "    graphs = []\n",
+    "    for i, pt_file in enumerate(sorted(root.glob(\"*.pt\"))):\n",
+    "        if limit is not None and i >= limit:\n",
+    "            break\n",
+    "        data = torch.load(pt_file, weights_only=False)\n",
+    "        if hasattr(data, \"node_id\"):\n",
+    "            del data.node_id\n",
+    "        graphs.append(data)\n",
+    "    return graphs\n",
+    "\n",
+    "root = Path(\"Datasets/train_pyg\")\n",
+    "graphs = load_raw_graphs(root, limit=5000)\n",
+    "print(f\"Total graphs loaded: {len(graphs)}\")\n",
+    "\n",
+    "for idx, g in enumerate(graphs):\n",
+    "    num_nodes = g.x.size(0)\n",
+    "    y = int(g.y)\n",
+    "\n",
+    "    if num_nodes == 0:\n",
+    "        print(f\"❌ Graf {idx} té 0 nodes\")\n",
+    "\n",
+    "    if y < 0 or y >= num_nodes:\n",
+    "        print(f\"❌ Graf {idx} target fora de rang: y={y}, num_nodes={num_nodes}\")\n",
+    "else:\n",
+    "    print(\"✔️ Tots els grafs tenen y dins [0, num_nodes)\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "8731bfdf",
    "metadata": {},
    "outputs": [
@@ -33,14 +84,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total graphs loaded: 150\n"
+      "Total graphs loaded: 4165\n"
      ]
     }
    ],
    "source": [
     "def load_train_graphs(root: Path):\n",
     "    graphs = []\n",
-    "    for pt_file in sorted(root.glob(\"*.pt\"))[278:428]:\n",
+    "    for pt_file in sorted(root.glob(\"*.pt\")):\n",
     "        data = torch.load(pt_file, weights_only=False)\n",
     "\n",
     "        # Eliminar node_id perquè PyG el tracta com a node feature\n",
@@ -65,12 +116,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data(x=[48, 2], edge_index=[2, 2256], edge_attr=[2256, 1], y=37)\n",
-      "x shape: torch.Size([48, 2])\n",
+      "Data(x=[280, 2], edge_index=[2, 78120], edge_attr=[78120, 1], y=241)\n",
+      "x shape: torch.Size([280, 2])\n",
       "x dtype: torch.float32\n",
-      "edge_index shape: torch.Size([2, 2256])\n",
+      "edge_index shape: torch.Size([2, 78120])\n",
       "edge_index dtype: torch.int64\n",
-      "edge_attr shape: torch.Size([2256, 1])\n",
+      "edge_attr shape: torch.Size([78120, 1])\n",
       "edge_attr dtype: torch.float32\n",
       "y shape: torch.Size([])\n",
       "y dtype: torch.int64\n"
@@ -94,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "2c4ed3c4",
    "metadata": {},
    "outputs": [
@@ -102,20 +153,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train set: 120 graphs\n",
-      "Val set: 30 graphs\n",
-      "DataBatch(x=[893, 2], edge_index=[2, 31190], edge_attr=[31190, 1], y=[32], batch=[893], ptr=[33])\n",
-      "Batch x shape: torch.Size([893, 2])\n",
-      "Batch edge_index shape: torch.Size([2, 31190])\n",
-      "Batch edge_attr shape: torch.Size([31190, 1])\n",
+      "Train set: 3332 graphs\n",
+      "Val set: 833 graphs\n",
+      "DataBatch(x=[4072, 2], edge_index=[2, 1207992], edge_attr=[1207992, 1], y=[32], batch=[4072], ptr=[33])\n",
+      "Batch x shape: torch.Size([4072, 2])\n",
+      "Batch edge_index shape: torch.Size([2, 1207992])\n",
+      "Batch edge_attr shape: torch.Size([1207992, 1])\n",
       "Batch y shape: torch.Size([32])\n",
-      "Batch batch vector shape: torch.Size([893])\n",
-      "DataBatch(x=[612, 2], edge_index=[2, 16318], edge_attr=[16318, 1], y=[30], batch=[612], ptr=[31])\n",
-      "Batch x shape: torch.Size([612, 2])\n",
-      "Batch edge_index shape: torch.Size([2, 16318])\n",
-      "Batch edge_attr shape: torch.Size([16318, 1])\n",
-      "Batch y shape: torch.Size([30])\n",
-      "Batch batch vector shape: torch.Size([612])\n"
+      "Batch batch vector shape: torch.Size([4072])\n",
+      "DataBatch(x=[4961, 2], edge_index=[2, 1556172], edge_attr=[1556172, 1], y=[32], batch=[4961], ptr=[33])\n",
+      "Batch x shape: torch.Size([4961, 2])\n",
+      "Batch edge_index shape: torch.Size([2, 1556172])\n",
+      "Batch edge_attr shape: torch.Size([1556172, 1])\n",
+      "Batch y shape: torch.Size([32])\n",
+      "Batch batch vector shape: torch.Size([4961])\n"
      ]
     }
    ],
@@ -147,6 +198,67 @@
     "print(\"Batch edge_attr shape:\", batch_val.edge_attr.shape)\n",
     "print(\"Batch y shape:\", batch_val.y.shape)\n",
     "print(\"Batch batch vector shape:\", batch_val.batch.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "31090993",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ Batch 55, graf 23: target=-1, num_nodes=24\n",
+      "ptr: tensor([   0,  109,  558,  830, 1110, 1324, 1393, 1451, 1508, 2086, 2161, 2498,\n",
+      "        2569, 2653, 2875, 3148, 3443, 3505, 4117, 4130, 4461, 4524, 4951, 5054,\n",
+      "        5078, 5084, 5174, 5290, 5564, 5622, 5799, 5843, 5854])\n",
+      "y: tensor([ 41,   3,  34, 241, 132,  20,  11,  28, 175,  38,  21,  39,  35, 185,\n",
+      "        255, 148,   7, 174,  12, 328,  24,  53,  33,  -1,   1,  31,  71,  42,\n",
+      "         53,   8,  21,   9])\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Enric\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch_geometric.loader import DataLoader\n",
+    "\n",
+    "train_loader = DataLoader(graphs, batch_size=32, shuffle=False)\n",
+    "\n",
+    "for batch_idx, batch in enumerate(train_loader):\n",
+    "    ptr = batch.ptr\n",
+    "    y = batch.y\n",
+    "\n",
+    "    for i in range(len(y)):\n",
+    "        start = ptr[i].item()\n",
+    "        end = ptr[i+1].item()\n",
+    "        num_nodes = end - start\n",
+    "        target = y[i].item()\n",
+    "\n",
+    "        if num_nodes == 0 or target < 0 or target >= num_nodes:\n",
+    "            print(f\"❌ Batch {batch_idx}, graf {i}: target={target}, num_nodes={num_nodes}\")\n",
+    "            print(\"ptr:\", ptr)\n",
+    "            print(\"y:\", y)\n",
+    "            raise SystemExit\n",
+    "\n",
+    "print(\"✔️ Tots els batches tenen targets coherents amb num_nodes\")\n"
    ]
   },
   {
@@ -355,32 +467,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 001 | Train Loss: 46.9010 | Train Acc: 0.0583 | Val Loss: 22.5111 | Val Acc: 0.1333\n",
-      "  → New best model saved\n",
-      "Epoch 002 | Train Loss: 29.6182 | Train Acc: 0.0750 | Val Loss: 7.3348 | Val Acc: 0.1000\n",
-      "Epoch 003 | Train Loss: 10.5382 | Train Acc: 0.0500 | Val Loss: 5.8149 | Val Acc: 0.0333\n",
-      "Epoch 004 | Train Loss: 8.4723 | Train Acc: 0.0667 | Val Loss: 5.5957 | Val Acc: 0.0333\n",
-      "Epoch 005 | Train Loss: 5.7392 | Train Acc: 0.0333 | Val Loss: 5.8338 | Val Acc: 0.0667\n",
-      "Epoch 006 | Train Loss: 6.1820 | Train Acc: 0.0917 | Val Loss: 7.2175 | Val Acc: 0.0667\n",
-      "Epoch 007 | Train Loss: 6.4800 | Train Acc: 0.0833 | Val Loss: 5.4449 | Val Acc: 0.1333\n",
-      "Epoch 008 | Train Loss: 5.9909 | Train Acc: 0.0917 | Val Loss: 5.3249 | Val Acc: 0.1000\n",
-      "Epoch 009 | Train Loss: 6.3992 | Train Acc: 0.0750 | Val Loss: 4.4641 | Val Acc: 0.1333\n",
-      "Epoch 010 | Train Loss: 7.1101 | Train Acc: 0.0750 | Val Loss: 4.2008 | Val Acc: 0.1333\n",
-      "Epoch 011 | Train Loss: 4.0139 | Train Acc: 0.1083 | Val Loss: 3.8710 | Val Acc: 0.1000\n",
-      "Epoch 012 | Train Loss: 3.9349 | Train Acc: 0.1083 | Val Loss: 4.4519 | Val Acc: 0.1333\n",
-      "Epoch 013 | Train Loss: 4.8649 | Train Acc: 0.0667 | Val Loss: 4.8571 | Val Acc: 0.1333\n",
-      "Epoch 014 | Train Loss: 5.0061 | Train Acc: 0.0750 | Val Loss: 5.3691 | Val Acc: 0.0333\n",
-      "Epoch 015 | Train Loss: 4.6428 | Train Acc: 0.0583 | Val Loss: 4.9965 | Val Acc: 0.0667\n",
-      "Epoch 016 | Train Loss: 4.8253 | Train Acc: 0.0750 | Val Loss: 6.0826 | Val Acc: 0.1333\n",
-      "Epoch 017 | Train Loss: 7.4773 | Train Acc: 0.0750 | Val Loss: 7.0824 | Val Acc: 0.1000\n",
-      "Epoch 018 | Train Loss: 6.7983 | Train Acc: 0.0750 | Val Loss: 4.8339 | Val Acc: 0.1000\n",
-      "Epoch 019 | Train Loss: 6.8378 | Train Acc: 0.0583 | Val Loss: 4.8104 | Val Acc: 0.0667\n",
-      "Epoch 020 | Train Loss: 7.4235 | Train Acc: 0.1000 | Val Loss: 4.2973 | Val Acc: 0.0667\n",
-      "Epoch 021 | Train Loss: 5.4276 | Train Acc: 0.0583 | Val Loss: 4.6360 | Val Acc: 0.1333\n",
-      "Early stopping triggered\n"
+     "ename": "RuntimeError",
+     "evalue": "CUDA error: device-side assert triggered\nCUDA kernel errors might be asynchronously reported at some other API call, so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1\nCompile with `TORCH_USE_CUDA_DSA` to enable device-side assertions.\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m num_epochs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m200\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, num_epochs \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m----> 4\u001b[0m     train_loss, train_acc \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_one_epoch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m     val_loss, val_acc \u001b[38;5;241m=\u001b[39m evaluate(model, val_loader, device)\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\n\u001b[0;32m      8\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m03d\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m | \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTrain Loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrain_loss\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m | Train Acc: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrain_acc\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m | \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     10\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVal Loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval_loss\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m | Val Acc: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval_acc\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     11\u001b[0m     )\n",
+      "Cell \u001b[1;32mIn[7], line 30\u001b[0m, in \u001b[0;36mtrain_one_epoch\u001b[1;34m(model, loader, optimizer, device)\u001b[0m\n\u001b[0;32m     24\u001b[0m loss_i \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39mcross_entropy(\n\u001b[0;32m     25\u001b[0m     logits_i\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m),\n\u001b[0;32m     26\u001b[0m     torch\u001b[38;5;241m.\u001b[39mtensor([target_i], device\u001b[38;5;241m=\u001b[39mdevice)\n\u001b[0;32m     27\u001b[0m )\n\u001b[0;32m     28\u001b[0m losses\u001b[38;5;241m.\u001b[39mappend(loss_i)\n\u001b[1;32m---> 30\u001b[0m pred_i \u001b[38;5;241m=\u001b[39m \u001b[43mlogits_i\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43margmax\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m pred_i \u001b[38;5;241m==\u001b[39m target_i:\n\u001b[0;32m     32\u001b[0m     correct \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: CUDA error: device-side assert triggered\nCUDA kernel errors might be asynchronously reported at some other API call, so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1\nCompile with `TORCH_USE_CUDA_DSA` to enable device-side assertions.\n"
      ]
     }
    ],
